testing commandline for allen

--- a/client/src/app/components/report/instantaneous-report/instantaneous-report.component.html
+++ b/client/src/app/components/report/instantaneous-report/instantaneous-report.component.html
@@ -53,7 +53,7 @@
 					<span class="list-table-header-label">Instrument</span>
 				</div>
                 <div class="truncate flex-item" fxFlex (click)="sortByMethaneLevel()">
-					<span class="list-table-header-label-sortable">Reading</span>
+					<span class="list-table-header-label-sortable">Reading (ppm)</span>
 					<md-icon class="list-table-header-sort" [ngClass]="{
 						'list-table-header-sort-reverse':sort.reversed,
 						'list-table-header-sort-inactive':sort.current !== 'methaneLevel'}">
