login pic and ime data generation

--- a/client/src/app/components/public/login/login.component.scss
+++ b/client/src/app/components/public/login/login.component.scss
@@ -1,5 +1,11 @@
 .background {
-	background-color: #774422;
+	background-image: url("../../../../brighterLandfill.jpg");
+	
+	//background-image: url("http://www.clui.org/sites/default/files/imagecache/clui-image/clui/post_images/waste_stream1_600.jpg");
+	//background-color: #774422;
+	background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center; 
 	height: 100%;
 }
 
