--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -150,6 +150,11 @@ a {
 //     background: #EEE;
 // }
 
+.list-table-icon-button {
+    margin-top: -4px;
+    cursor: pointer;
+}
+
 .loading-indicator-container {
     padding-top: 16px;
 }
