--- a/client/src/app/components/dashboard/dashboard.component.scss
+++ b/client/src/app/components/dashboard/dashboard.component.scss
@@ -1,9 +1,57 @@
-body {
-        background-size: cover;
-        background-image: url("https://www.geosyntec.com/media/k2/items/cache/e208d5104268085aecc7ece94f6f710e_XL.jpg");
-    }
-/*position: fixed;
-        width: 100%;
-        height: 100%;*/
+.dashboard-container {
+	padding: 32px 128px;
+	text-align: center;
+}
 
+.dashboard-title {
+	margin-top: 32px;
+	font-size: 3.7rem;
+}
 
+.dashboard-card-container {
+	margin: 16px 12px;
+}
+
+.dashboard-main-card {
+	height: 300px;
+}
+
+.dashboard-card {
+	height: 160px;
+}
+
+.dashboard-card-title {
+	font-size: 1.337rem;
+	font-weight: 300;
+	padding: 12px 0;
+}
+
+.dashboard-main-title-text {
+	margin: 16px;
+}
+
+.dashboard-card-title-icon {
+	//font-size: 1.778rem;
+    position: relative;
+    top: 4px;
+    right: 4px;
+}
+
+.dashboard-main-card-title-icon {
+	font-size: 3rem;
+	position: relative;
+    right: 16px;
+	margin: 24px 0 48px 0;
+}
+
+.dashboard-card-stat {
+	font-size: 1.5rem;
+}
+
+.dashboard-card-footer {
+	background: #E3E3E3;
+	font-size: 0.86rem;
+    font-weight: 500;
+    height: 50px;
+    padding-top: 19px;
+}
