--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
 						<md-icon class="dashboard-main-card-title-icon">build</md-icon>
 					</div>
 					<div class="dashboard-main-title-text">
-						Main Card
+						Overall Progress for the day
 					</div>
 				</div>
 				<div class="dashboard-card-stat">
@@ -90,16 +90,16 @@
 				<md-card-content>
 					<div class="dashboard-card-title">
 						<md-icon class="dashboard-card-title-icon">build</md-icon>
-						Insert Title Here
+						Grids Checked
 					</div>
 					<div class="dashboard-card-stat">
-						1
+						41
 					</div>
 				</md-card-content>
 				<md-card-footer>
 					<div class="dashboard-card-footer">
 						<md-icon>trending_flat</md-icon>
-						0% From Yesterday
+						10% From Yesterday
 					</div>
 				</md-card-footer>
 			</md-card>
@@ -109,16 +109,16 @@
 				<md-card-content>
 					<div class="dashboard-card-title">
 						<md-icon class="dashboard-card-title-icon">build</md-icon>
-						Insert Title Here
+						Repairs
 					</div>
 					<div class="dashboard-card-stat">
-						1
+						20
 					</div>
 				</md-card-content>
 				<md-card-footer>
 					<div class="dashboard-card-footer">
 						<md-icon>trending_flat</md-icon>
-						0% From Yesterday
+						5% From Yesterday
 					</div>
 				</md-card-footer>
 			</md-card>
@@ -128,16 +128,16 @@
 				<md-card-content>
 					<div class="dashboard-card-title">
 						<md-icon class="dashboard-card-title-icon">build</md-icon>
-						Insert Title Here
+						Number of times Synced
 					</div>
 					<div class="dashboard-card-stat">
-						1
+						150
 					</div>
 				</md-card-content>
 				<md-card-footer>
 					<div class="dashboard-card-footer">
 						<md-icon>trending_flat</md-icon>
-						0% From Yesterday
+						95% From Yesterday
 					</div>
 				</md-card-footer>
 			</md-card>
