--- a/client/src/app/components/user-group/user-group/user-group.component.html
+++ b/client/src/app/components/user-group/user-group/user-group.component.html
@@ -10,10 +10,10 @@
 				</div>
 				<div *ngIf="isDataLoaded" class="section-form-container">
 					<md-input-container class="md-input-full-width">
-						<input md-input placeholder="Group Name" [(ngModel)]="userGroup.name">
+						<input mdInput placeholder="Group Name" [(ngModel)]="userGroup.name">
 					</md-input-container>
 					<md-input-container class="md-input-full-width">
-						<input md-input placeholder="Description" [(ngModel)]="userGroup.description">
+						<input mdInput placeholder="Description" [(ngModel)]="userGroup.description">
 					</md-input-container>
 				</div>
 			</md-card-content>
