--- a/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
@@ -18,7 +18,7 @@
 						<strong>File Name:</strong> {{dataSet.filename}}
 					</div>
 					<md-input-container class="flex-item" fxFlex style="margin-top:-20px;">
-						<input md-input type="number" min="29.5" max="30.5" placeholder="Barometric Pressure" [(ngModel)]="dataSet.barometricPressure" (ngModelChange)="unverifiedDataService.checkForErrors(dataSet)">
+						<input mdInput type="number" min="29.5" max="30.5" placeholder="Barometric Pressure" [(ngModel)]="dataSet.barometricPressure" (ngModelChange)="unverifiedDataService.checkForErrors(dataSet)">
 					</md-input-container>
 				</div>
 			</md-card-content>
