--- a/client/src/app/components/user-group/new-user-group-dialog/new-user-group-dialog.component.html
+++ b/client/src/app/components/user-group/new-user-group-dialog/new-user-group-dialog.component.html
@@ -2,10 +2,10 @@
 	<div class="section-title">Create New User Group</div>
 	<div class="section-form-container">
 		<md-input-container class="md-input-full-width">
-			<input md-input placeholder="Group Name" [(ngModel)]="userGroup.name">
+			<input mdInput placeholder="Group Name" [(ngModel)]="userGroup.name">
 		</md-input-container>
 		<md-input-container class="md-input-full-width">
-			<input md-input placeholder="Description" [(ngModel)]="userGroup.description">
+			<input mdInput placeholder="Description" [(ngModel)]="userGroup.description">
 		</md-input-container>
 	</div>
 </md-dialog-content>
