--- a/client/src/app/components/user/new-user-dialog/new-user-dialog.component.html
+++ b/client/src/app/components/user/new-user-dialog/new-user-dialog.component.html
@@ -2,22 +2,22 @@
 	<div class="section-title">Register New User</div>
 	<div class="section-form-container">
 		<md-input-container class="md-input-full-width">
-			<input md-input placeholder="Username" [(ngModel)]="user.username">
+			<input mdInput placeholder="Username" [(ngModel)]="user.username">
 		</md-input-container>
 		<md-input-container class="md-input-full-width">
-			<input md-input placeholder="Password" [(ngModel)]="user.password" type="password">
+			<input mdInput placeholder="Password" [(ngModel)]="user.password" type="password">
 		</md-input-container>
 		<md-input-container class="md-input-full-width">
-			<input md-input placeholder="First Name" [(ngModel)]="user.person.firstname">
+			<input mdInput placeholder="First Name" [(ngModel)]="user.person.firstname">
 		</md-input-container>
 		<md-input-container class="md-input-full-width">
-			<input md-input placeholder="Middle Name" [(ngModel)]="user.person.middlename">
+			<input mdInput placeholder="Middle Name" [(ngModel)]="user.person.middlename">
 		</md-input-container>
 		<md-input-container class="md-input-full-width">
-			<input md-input placeholder="Last Name" [(ngModel)]="user.person.lastname">
+			<input mdInput placeholder="Last Name" [(ngModel)]="user.person.lastname">
 		</md-input-container>
 		<md-input-container class="md-input-full-width">
-			<input md-input placeholder="Email" [(ngModel)]="user.person.emailAddress">
+			<input mdInput placeholder="Email" [(ngModel)]="user.person.emailAddress">
 		</md-input-container>
 	</div>
 </md-dialog-content>
