added directory for static images

--- a/client/src/app/components/public/login/login.component.scss
+++ b/client/src/app/components/public/login/login.component.scss
@@ -1,5 +1,5 @@
 .background {
-	background-image: url("../../../../brighterLandfill.jpg");
+	background-image: url("../../../../public/images/brighterLandfill.jpg");
 	
 	//background-image: url("http://www.clui.org/sites/default/files/imagecache/clui-image/clui/post_images/waste_stream1_600.jpg");
 	//background-color: #774422;
