fixed logo filename in login page

--- a/client/src/app/components/public/login/login.component.html
+++ b/client/src/app/components/public/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="background">
 	<div class="logo-container">
-		<img src="/src/public/images/la-san-logo-outline.png" style="opacity:0.69;">
+		<img src="/src/public/images/la-san-logo-outline.PNG" style="opacity:0.69;">
 	</div>
 	<div class="card-container flex-container" fxLayout="row" fxLayoutAlign="center center">
 		<md-card fxFlex="400px" style="padding:32px 24px;">
