--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -136,7 +136,7 @@
 				</md-card-content>
 				<md-card-footer>
 					<div class="dashboard-card-footer">
-						<md-icon>trending_flat</md-icon>
+						<md-icon>trending_up</md-icon>
 						95% From Yesterday
 					</div>
 				</md-card-footer>
