--- a/client/src/app/components/user-group/user-group-list/user-group-list.component.html
+++ b/client/src/app/components/user-group/user-group-list/user-group-list.component.html
@@ -41,10 +41,10 @@
 					{{group.description}}
 				</div>
 				<!--<div class="truncate flex-item" fxFlex="25">
-					{{user.person.emailAddress}}
+					{{user.emailAddress}}
 				</div>
 				<div class="truncate flex-item" fxFlex="25">
-					{{user.person.employeeId}}
+					{{user.employeeId}}
 				</div>-->
 				<div class="flex-item" fxFlex="50px" style="text-align:center;">
 					<md-icon (click)="delete(group)" style="color:#F00;cursor:pointer;">delete</md-icon>
