--- a/client/src/app/components/user/new-user-dialog/new-user-dialog.component.html
+++ b/client/src/app/components/user/new-user-dialog/new-user-dialog.component.html
@@ -8,16 +8,16 @@
 			<input mdInput placeholder="Password" [(ngModel)]="user.password" type="password">
 		</md-input-container>
 		<md-input-container class="md-input-full-width">
-			<input mdInput placeholder="First Name" [(ngModel)]="user.person.firstname">
+			<input mdInput placeholder="First Name" [(ngModel)]="user.firstname">
 		</md-input-container>
 		<md-input-container class="md-input-full-width">
-			<input mdInput placeholder="Middle Name" [(ngModel)]="user.person.middlename">
+			<input mdInput placeholder="Middle Name" [(ngModel)]="user.middlename">
 		</md-input-container>
 		<md-input-container class="md-input-full-width">
-			<input mdInput placeholder="Last Name" [(ngModel)]="user.person.lastname">
+			<input mdInput placeholder="Last Name" [(ngModel)]="user.lastname">
 		</md-input-container>
 		<md-input-container class="md-input-full-width">
-			<input mdInput placeholder="Email" [(ngModel)]="user.person.emailAddress">
+			<input mdInput placeholder="Email" [(ngModel)]="user.emailAddress">
 		</md-input-container>
 	</div>
 </md-dialog-content>
