--- a/client/src/app/components/user/user-list/user-list.component.html
+++ b/client/src/app/components/user/user-list/user-list.component.html
@@ -46,13 +46,13 @@
 					</a>
 				</div>
 				<div class="truncate flex-item" fxFlex="25">
-					{{user.person.lastname}}, {{user.person.firstname}}
+					{{user.lastname}}, {{user.firstname}}
 				</div>
 				<div class="truncate flex-item" fxFlex="25">
-					{{user.person.emailAddress}}
+					{{user.emailAddress}}
 				</div>
 				<div class="truncate flex-item" fxFlex="25">
-					{{user.person.employeeId}}
+					{{user.employeeId}}
 				</div>
 				<div class="flex-item" fxFlex="50px" style="text-align:center;">
 					<md-icon *ngIf="user.enabled" style="color:#0D0;">check</md-icon>
