--- a/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
@@ -6,7 +6,7 @@
 				<div class="section-title">Data Information</div>
 				<div class="section-form-container flex-container" fxLayout="row">
 					<div class="flex-item" fxFlex>
-						<strong>Inspector:</strong> {{dataSet.inspector.person.firstname}} {{dataSet.inspector.person.lastname}}
+						<strong>Inspector:</strong> {{dataSet.inspector.firstname}} {{dataSet.inspector.lastname}}
 					</div>
 					<div class="flex-item" fxFlex>
 						<strong>Site:</strong> {{dataSet.site.name}}
