--- a/client/src/app/components/user/user-profile/user-profile.component.html
+++ b/client/src/app/components/user/user-profile/user-profile.component.html
@@ -1,8 +1,8 @@
 <div class="section-multiple-container flex-container">
-	<div *ngIf="user.person.firstname && user.person.lastname" class="section-title">
-		{{user.person.firstname}} {{user.person.lastname}}'s Profile
+	<div *ngIf="user.firstname && user.lastname" class="section-title">
+		{{user.firstname}} {{user.lastname}}'s Profile
 	</div>
-	<div *ngIf="!user.person.firstname || !user.person.lastname" class="section-title">
+	<div *ngIf="!user.firstname || !user.lastname" class="section-title">
 		User's Profile
 	</div>
 	<div fxLayout="column" fxLayout.gt-md="row">
@@ -21,16 +21,16 @@
 						<input mdInput placeholder="Password" [(ngModel)]="user.password" type="password">
 					</md-input-container>-->
 					<md-input-container class="md-input-full-width">
-						<input mdInput placeholder="First Name" [(ngModel)]="user.person.firstname">
+						<input mdInput placeholder="First Name" [(ngModel)]="user.firstname">
 					</md-input-container>
 					<md-input-container class="md-input-full-width">
-						<input mdInput placeholder="Middle Name" [(ngModel)]="user.person.middlename">
+						<input mdInput placeholder="Middle Name" [(ngModel)]="user.middlename">
 					</md-input-container>
 					<md-input-container class="md-input-full-width">
-						<input mdInput placeholder="Last Name" [(ngModel)]="user.person.lastname">
+						<input mdInput placeholder="Last Name" [(ngModel)]="user.lastname">
 					</md-input-container>
 					<md-input-container class="md-input-full-width">
-						<input mdInput placeholder="Email" [(ngModel)]="user.person.emailAddress">
+						<input mdInput placeholder="Email" [(ngModel)]="user.emailAddress">
 					</md-input-container>
 				</div>
 			</md-card-content>
