--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.scss
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.scss
@@ -14,6 +14,18 @@
 .sidenav-contents {
 	width: 250px;
 }
+.nav-logo-text{
+	padding: 10px 0 20px 20px;
+}
+.nav-logo{
+	background: linear-gradient(90deg, rebeccapurple, mediumorchid);
+}
+
+.la-logo{
+	
+	padding: 50px 0 10px 20px;
+	width: 100px;	
+}
 
 .sidenav-section {
 
