--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.html
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.html
@@ -18,7 +18,18 @@
 </md-toolbar>
 <md-sidenav-container fullscreen>
 	<md-sidenav #sidenav mode="side" opened="true" class="sidenav-contents">
-		<div>
+		<div >
+			<div class="nav-logo">
+				<div>
+					<picture >				
+						<img class="la-logo" src="/src/public/images/la-seal.svg"/>			
+					</picture>
+				</div>
+				<div class="nav-logo-text">
+					<font color="white">Bureau of Sanitation</font>	
+				</div>
+			</div>
+			
 			<div class="sidenav-section" *ngFor="let section of sections">
 				<div class="sidenav-section-header">
 					{{section.name}}
