--- a/client/src/app/components/directives/data-view/ime-list-view/ime-list-view.component.html
+++ b/client/src/app/components/directives/data-view/ime-list-view/ime-list-view.component.html
@@ -1,27 +1,27 @@
 <div *ngIf="data.length > 0" class="list-table">
 	<div class="unselectable list-table-header-row flex-container" fxLayout="row">
-		<div class="truncate flex-item" fxFlex (click)="sortByIme()">
+		<div class="truncate flex-item" fxFlex (click)="sortBy('ime')">
 			<span class="list-table-header-label-sortable">IME#</span>
 			<md-icon class="list-table-header-sort" [ngClass]="{
 				'list-table-header-sort-reverse':sort.reversed,
 				'list-table-header-sort-inactive':sort.current !== 'ime'}">
 				arrow_downward</md-icon>
 		</div>
-		<div class="truncate flex-item" fxFlex (click)="sortByDate()">
+		<div class="truncate flex-item" fxFlex (click)="sortBy('date')">
 			<span class="list-table-header-label-sortable">Date</span>
 			<md-icon class="list-table-header-sort" [ngClass]="{
 				'list-table-header-sort-reverse':sort.reversed,
 				'list-table-header-sort-inactive':sort.current !== 'date'}">
 				arrow_downward</md-icon>
 		</div>
-		<div class="truncate flex-item" fxFlex (click)="sortByInitMethaneLevel()">
+		<div class="truncate flex-item" fxFlex (click)="sortBy('initMethaneLevel')">
 			<span class="list-table-header-label-sortable">Initial Reading</span>
 			<md-icon class="list-table-header-sort" [ngClass]="{
 				'list-table-header-sort-reverse':sort.reversed,
 				'list-table-header-sort-inactive':sort.current !== 'initMethaneLevel'}">
 				arrow_downward</md-icon>
 		</div>
-		<div class="truncate flex-item" fxFlex (click)="sortByLastMethaneLevel()">
+		<div class="truncate flex-item" fxFlex (click)="sortBy('lastMethaneLevel')">
 			<span class="list-table-header-label-sortable">Latest Reading</span>
 			<md-icon class="list-table-header-sort" [ngClass]="{
 				'list-table-header-sort-reverse':sort.reversed,
@@ -32,9 +32,9 @@
 			<span class="list-table-header-label">Status</span>
 		</div>
 	</div>
-	<div *ngFor="let ime of data; let isOdd = odd" class="list-table-row flex-container" fxLayout="row" [ngClass]="{'list-table-odd-row': isOdd, 'warmspot': getStatus(ime.methaneLevel) == 'warmspot', 'hotspot': getStatus(ime.methaneLevel) == 'hotspot'}">
+	<div *ngFor="let ime of data; let isOdd = odd" class="list-table-row flex-container" fxLayout="row" [ngClass]="{'list-table-odd-row': isOdd}">
 		<div class="truncate flex-item" fxFlex>{{ime.imeNumber}}</div>
-		<div class="truncate flex-item" fxFlex>{{getDate(ime.startTime)}}</div>
+		<div class="truncate flex-item" fxFlex>{{dateTimeUtils.getDate(ime.discoveryDate)}}</div>
 		<div class="truncate flex-item" fxFlex></div>
 		<div class="truncate flex-item" fxFlex></div>
 		<div class="truncate flex-item" fxFlex="100px"></div>
